# flutter-pdfium

./: Makefile  README.md  ffigen.yaml  justfile  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/ch/smartive/smart_pdf_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: smart_pdf.podspec
ios/Classes/: smart_pdf.c
lib/: smart_pdf.dart  smart_pdf_bindings_generated.dart
linux/: CMakeLists.txt
macos/: smart_pdf.podspec
src/: CMakeLists.txt  smart_pdf.c  smart_pdf.h
src/pdfium/: fpdfview.h
windows/: CMakeLists.txt
windows/pdfium/: LICENSE
